# JourneyCraftAI

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
config/: agent_config.yaml
notebooks/: autogen_sample_code.ipynb  langgraph_multi_agent_collaboration.ipynb  scratchpad.ipynb
notebooks/agent/: sapporo_trip_map.html  trip_plan_sapporo.md
notebooks/temp/: sapporo_trip_itinerary.md
src/: demo_ui.py  interface.py  main.py  trip_agents.py
src/agents/: agent_factory.py
src/utility/: helper.py  prompt_template.py  system_messages.py
